# obindex2_review

./: .gitignore  CMakeLists.txt  README.md
example/: ex_search.cc
include/: binary_descriptor.h  binary_index.h  binary_tree.h  binary_tree_node.h  priority_queues.h
src/: binary_descriptor.cc  binary_index.cc  binary_tree.cc  binary_tree_node.cc
